--- a/PL/Properties/launchSettings.json
+++ b/PL/Properties/launchSettings.json
@@ -12,12 +12,19 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development "
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5057",
       "dotnetRunMessages": true
     },
     "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Profile 1": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
